-------------------------------------------

2015-02-05: initial release

2015-02-15:

- Fixed height and width of channellogos in whatsonnext and favorites
- Fixed numerus of timerconflicts in displaymainmenu
- Added nowBar.svg
- Reduced intensity of progressbars in whatsonnow
- Fixed progressbar/mute in displayvolume
- Reduced glow of VDR-logo
- Enlarged messagebars
- Enlarged gap between start-stop-time and progressbar
- Reworked iconbar in setupmenu
- Reduced width of timerlogos in displaymainmenu.xml
- Added posters for folders in displaymenurecordings.xml
- Fixed format of menuitemnumbers in displaymenu-main and -setup
- Fixed condition for running timer in displaymenutimers.xml

2015-02-21:

- Changed position of folderposters in displaymenurecordings
- Added flags for messagebars
- Changed statusmarker for timers in displaymenuschedules
- Added status-graphics
- Changed statusmarker for timers and recordings
- Changed {name} to {epgname} in displaymenudetailrecording.xml

2015-02-22:

- Changed position of series- and movies-posters in detailepg and detailrecording
- Fixed scrolled text in epg-descriptions
- Fixed textposition at recordingsfolder

2015-04-16:

- Merged with shady_KISS
- Fixed setupiconbar
- Fixed scrollbars
- Fixed heights in weatherforecast
- Enhanced postion of setupiconbar
- Added setup for delay and fadetimes

2015-04-18:

- Switched devices in mainmenu to modus=light
- Numbered setup for delay and fadetimes

2015-04-19:

- Increased size of channellogos for timers in mainmenu (provided by utility@vdrportal.de)

2015-04-20:

- Optimized position of timerstextbox in displaymenumain
- Optimized position of timerstoptime in displaymenutimers (provided by utility@vdrportal.de)
- Added section for neutrinoepg-plugin in displaymenudefault
- Added graphical progressbars for systeminfo-plugin
- Added symbol for remotetimers in mainmenutimers

2015-04-21:

- Updated HISTORY, increased luminescence of remoteTimers.png

