@@ -15,12 +15,6 @@
 	<backgroundmodeonly>
 	</backgroundmodeonly>
 
-	<datetime>
-		<area x="34%" y="90%" width="32%" height="5%" layer="3">
-			<drawtext x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="75%" color="{clrLightGray}" text="{dayname} {dayleadingzero}. {monthnameshort}   {time}"/>
-		</area>
-	</datetime>
-
 	<scrapercontent>
 		<area condition="{isbanner}" x="1%" y="2%" width="{areaheight}*0.13*{mediawidth}/{mediaheight}" height="13%" layer="2">
 			<drawimage imagetype="image" path="{mediapath}" align="center" valign="center"  width="{areawidth}" height="{areaheight}"/>
@@ -32,21 +26,9 @@
 
 	<rectitle>
 		<area x="3%" y="77%" width="94%" height="8%" layer="3">
-			<drawtext x="{width(title)}+10" valign="center" width="{areawidth}-{width(title)}-10" font="{light}" fontsize="60%" color="{clrLightGray}" text="{recsubtitle}" />
+			<drawtext x="{width(title)}+10" valign="center" align="center" width="{areawidth}-{width(title)}-10" font="{light}" fontsize="60%" color="{clrLightGray}" text="{recsubtitle}" />
 		</area>
 	</rectitle>
-
-	<currenttime>
-		<area x="3%" y="91%" width="9%" height="7%" layer="2">
-			<drawtext x="0" align="center" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{reccurrent}" />
-		</area>
-	</currenttime>
-
-	<totaltime>
-		<area x="88%" y="91%" width="9%" height="7%" layer="2">
-			<drawtext align="center" valign="center" font="{light}" fontsize="65%" color="{clrLightGray}" text="{rectotal}" />
-		</area>
-	</totaltime>
 
     <progressbar>
         <area x="2%" y="87%" width="96%" height="3%" layer="3">
@@ -68,31 +50,55 @@
 			</loop>
 		</area>
 	</cutmarks>
-
+	
+		<currenttime>
+		<area x="3%" y="92%" width="8%" height="7%" layer="3">
+			<drawtext x="0" align="center" valign="center" font="{light}" fontsize="45%" color="{clrLightGray}" text="{reccurrent}" />
+		</area>
+	</currenttime>
+	
+		<datetime>
+		<area x="12%" y="92%" width="22%" height="7%" layer="3">
+			<drawtext x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{tr(recordedat)}: {dayleadingzero}.{month}.{year}   {time}"/>
+		</area>
+	</datetime>
+	
 	<controlicons>
-		<area x="34%" y="95%" width="8%" height="4%" layer="3">
-			<drawtext condition="not{rewind}++ not{rewind1x}++not{rewind2x}++ not{rewind3x}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="70%" color="{clrDarkGray}" text="REW"/>
-			<drawtext condition="{rewind}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="70%" color="{clrHigh}" text="REW"/>
-			<drawtext condition="{rewind1x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="70%" color="{clrHigh}" text="1x REW"/>
-			<drawtext condition="{rewind2x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="70%" color="{clrHigh}" text="2x REW"/>
-			<drawtext condition="{rewind3x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="70%" color="{clrHigh}" text="3x REW"/>
+		<area x="34%" y="92%" width="8%" height="7%" layer="3">
+			<drawtext condition="not{rewind}++ not{rewind1x}++not{rewind2x}++ not{rewind3x}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="40%" color="{clrDarkGray}" text="REW"/>
+			<drawtext condition="{rewind}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="40%" color="{clrHigh}" text="REW"/>
+			<drawtext condition="{rewind1x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="40%" color="{clrHigh}" text="1x REW"/>
+			<drawtext condition="{rewind2x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="40%" color="{clrHigh}" text="2x REW"/>
+			<drawtext condition="{rewind3x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="40%" color="{clrHigh}" text="3x REW"/>
 		</area>
-		<area x="42%" y="95%" width="8%" height="4%" layer="3">
-			<drawtext condition="not{pause}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="70%" color="{clrDarkGray}" text="PAUSE"/>
-			<drawtext condition="{pause}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="70%" color="{clrHigh}" text="PAUSE"/>
+		<area x="42%" y="92%" width="8%" height="7%" layer="3">
+			<drawtext condition="not{pause}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="40%" color="{clrDarkGray}" text="PAUSE"/>
+			<drawtext condition="{pause}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="40%" color="{clrHigh}" text="PAUSE"/>
 		</area>
-		<area x="50%" y="95%" width="8%" height="4%" layer="3">
-			<drawtext condition="not{play}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="70%" color="{clrDarkGray}" text="PLAY"/>
-			<drawtext condition="{play}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="70%" color="{clrHigh}" text="PLAY"/>
+		<area x="50%" y="92%" width="8%" height="7%" layer="3">
+			<drawtext condition="not{play}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="40%" color="{clrDarkGray}" text="PLAY"/>
+			<drawtext condition="{play}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="40%" color="{clrHigh}" text="PLAY"/>
 		</area>
-		<area x="58%" y="95%" width="8%" height="4%" layer="3">
-			<drawtext condition="not{forward}++ not{forward1x}++not{forward2x}++ not{forward3x}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="70%" color="{clrDarkGray}" text="FWD"/>
-			<drawtext condition="{forward}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="70%" color="{clrHigh}" text="FWD"/>
-			<drawtext condition="{forward1x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="70%" color="{clrHigh}" text="1x FWD"/>
-			<drawtext condition="{forward2x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="70%" color="{clrHigh}" text="2x FWD"/>
-			<drawtext condition="{forward3x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="70%" color="{clrHigh}" text="3x FWD"/>
+		<area x="58%" y="92%" width="8%" height="7%" layer="3">
+			<drawtext condition="not{forward}++ not{forward1x}++not{forward2x}++ not{forward3x}" x="0" y="0" width="{areawidth}" valign="center" align="center" font="{light}" fontsize="40%" color="{clrDarkGray}" text="FWD"/>
+			<drawtext condition="{forward}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="40%" color="{clrHigh}" text="FWD"/>
+			<drawtext condition="{forward1x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="40%" color="{clrHigh}" text="1x FWD"/>
+			<drawtext condition="{forward2x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="40%" color="{clrHigh}" text="2x FWD"/>
+			<drawtext condition="{forward3x}" x="0" y="0" width="{areawidth}"  valign="center" align="center" font="{light}" fontsize="40%" color="{clrHigh}" text="3x FWD"/>
 		</area>
 	</controlicons>
+	
+	<endtime>
+		<area x="65%" y="92%" width="22%" height="7%" layer="3">
+			<drawtext align="center" valign="center" font="{light}" fontsize="40%" color="{clrLightGray}" text="{tr(replayends)}: {recend}" />
+		</area>
+	</endtime>
+
+	<totaltime>
+		<area x="89%" y="92%" width="8%" height="7%" layer="3">
+			<drawtext align="center" valign="center" font="{light}" fontsize="45%" color="{clrLightGray}" text="{rectotal}" />
+		</area>
+	</totaltime>
 
     <controliconsmodeonly>
 		<area x="0" y="94%" width="100%" height="6%" layer="1">
